[FEATURE] Make the grabbing area for Transform Tool handles twice lager than the handles themselves

BUG:334933
CCMAIL:kimageshop@kde.org